# rustmossen

./: .gitignore  20260425升级.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GrowthBook迁移计划.md  LICENSE  OpenTelemetry删除计划.md  PLAN_PRODUCTION.md  QueryEngine.ts  README.md  README.zh-CN.md  SECURITY.md  Tool.ts  bunfig.toml  clippy.toml  commands.ts  context.ts  cost-tracker.ts  dialogLaunchers.tsx  eslint.config.mjs  harness-final-report.json  harness-final-report.md  harness_slash_command_matrix.json  harness全链路测试.md  harness能力基线矩阵.md  history.ts  interactiveHelpers.tsx  librust_out.rlib  main.tsx  mossen开发历史.md  package.json  projectOnboardingState.ts  query.ts  run-bun-featured.sh  run-mossen.sh  setup.ts  tools.ts  tsconfig.json  (+2 more)
crates/mossen-agent/: Cargo.toml  HOOK_AUDIT.md  PERMISSION_CONTEXT_AUDIT.md  TODOWRITE_DEADLOCK_AUDIT.md
crates/mossen-agent/src/: api_client.rs  commands.rs  condenser.rs  cost_tracker.rs  diagnostics.rs  dialogue.rs  engine.rs  goal.rs  history.rs  lib.rs  retry.rs  stop_hooks.rs  streaming.rs  task.rs  token_estimation.rs  tool_registry.rs  tools_index.rs  transcript.rs  types.rs
crates/mossen-agent/src/api/: admin_requests.rs  bootstrap.rs  client.rs  empty_usage.rs  error_utils.rs  errors.rs  files_api.rs  first_token_date.rs  grove.rs  logging.rs  mod.rs  mossen_agent_sdk.rs  mossen_api.rs  openai.rs  overage_credit.rs  prompt_cache.rs  referral.rs  sdk.rs  session_ingress.rs  ultrareview_quota.rs  usage.rs  with_retry.rs
crates/mossen-agent/src/context/: fps_metrics.rs  mailbox.rs  mod.rs  modal.rs  notifications.rs  overlay.rs  prompt_overlay.rs  queued_message.rs  stats.rs  voice_state.rs
crates/mossen-agent/src/coordinator/: coordinator_mode.rs  mod.rs
crates/mossen-agent/src/hooks/: async_registry.rs  config_snapshot.rs  (+15 more)
crates/mossen-cli/: Cargo.toml  PLUGIN_RELOAD_AUDIT.md
crates/mossen-cli/src/: app_state.rs  assistant.rs  bootstrap.rs  buddy.rs  cli.rs  commands_registry.rs  cost_tracker.rs  dialog_launchers.rs  entrypoints.rs  exit.rs  handlers.rs  history.rs  interactive.rs  keybindings.rs  main.rs  memdir.rs  migrations.rs  native_color_diff.rs  native_file_index.rs  native_yoga.rs  output_styles.rs  platform.rs  plugin_handlers.rs  plugins.rs  print_handlers.rs  proactive.rs  project_onboarding.rs  query_engine.rs  remote_io.rs  repl.rs  repl_mcp.rs  root_modules.rs  schemas_hooks.rs  screens.rs  sdk_schemas.rs  server.rs  session_hooks.rs  setup.rs  signal.rs  stream_json_render_events.rs  (+10 more)
crates/mossen-commands/: Cargo.toml
crates/mossen-commands/src/: access.rs  add_dir.rs  add_dir_index.rs  add_dir_validation.rs  advisor.rs  agents_index.rs  assistant.rs  assistant_index.rs  auth.rs  branch.rs  branch_index.rs  bridges.rs  brief.rs  btw.rs  btw_index.rs  changes.rs  chrome.rs  chrome_index.rs  clear_index.rs  color.rs  color_index.rs  command_extras.rs  commit.rs  compact_index.rs  component_logic.rs  component_stubs.rs  condense.rs  config.rs  config_index.rs  context.rs  context_index.rs  copy.rs  copy_index.rs  cost_index.rs  crafts.rs  deauth.rs  delegates.rs  desktop.rs  desktop_index.rs  diagnose.rs  (+91 more)
crates/mossen-mcp/: Cargo.toml
crates/mossen-mcp/src/: auth.rs  auth_ext.rs  channels.rs  client.rs  client_ext.rs  config.rs  config_ext.rs  discovery.rs  elicitation.rs  extras.rs  hosted.rs  lib.rs  normalization.rs  plans.rs  prompts.rs  protocol.rs  resources.rs  server.rs  tools.rs  transport.rs  types_schemas.rs  utils.rs  xaa.rs  xaa_idp_login.rs
crates/mossen-remote/: Cargo.toml
crates/mossen-remote/src/: connection.rs  http.rs  lib.rs  ndjson.rs  print.rs  remote_io.rs  remote_session.rs  server.rs  stdio.rs  structured_io.rs  transport.rs  upstreamproxy.rs  websocket.rs
crates/mossen-skills/: CONDITIONAL_SKILL_AUDIT.md  Cargo.toml
crates/mossen-skills/src/: bundled.rs  config.rs  discovery.rs  dynamic.rs  executor.rs  lib.rs  loader.rs  manifest.rs  plugin.rs  registry.rs  skill.rs
crates/mossen-tools/: Cargo.toml
crates/mossen-tools/src/: agent.rs  ask_user.rs  bash.rs  brief.rs  config.rs  cost_query.rs  cron_create.rs  cron_delete.rs  cron_list.rs  effort_control.rs  enter_plan_mode.rs  enter_worktree.rs  exit.rs  exit_plan_mode.rs  exit_worktree.rs  file_edit.rs  file_read.rs  file_write.rs  glob.rs  grep.rs  lib.rs  lsp.rs  mcp_auth.rs  mcp_list.rs  mcp_read.rs  mcp_tool.rs  notebook_edit.rs  notification.rs  output_style.rs  power_shell.rs  remote_trigger.rs  repl.rs  send_message.rs  send_user_file.rs  skill.rs  skill_discovery.rs  sleep.rs  synthetic_output.rs  task_create.rs  task_get.rs  (+16 more)
crates/mossen-tui/: Cargo.toml  RENDER_CONTRACT.md
crates/mossen-tui/benches/: markdown_streaming.rs
crates/mossen-tui/src/: app.rs  app_services.rs  approval_state.rs  event.rs  layout.rs  lib.rs  message_model.rs  render_cache.rs  render_events.rs  render_glyphs.rs  render_lifecycle.rs  render_model.rs  render_profile.rs  state.rs  theme.rs
crates/mossen-tui/tests/: keybinding_smoke.rs  render_contract.rs  render_snapshot.rs
crates/mossen-types/: Cargo.toml
crates/mossen-types/src/: api.rs  build_macros.rs  command.rs  config.rs  connector_text.rs  error.rs  generated.rs  hooks.rs  ids.rs  lib.rs  logs.rs  message.rs  model.rs  permissions.rs  plugin.rs  session.rs  text_input.rs  tool.rs
crates/mossen-utils/: Cargo.toml
crates/mossen-utils/src/: CircularBuffer.rs  abort_controller.rs  activity_manager.rs  advisor.rs  agent_context.rs  agent_id.rs  agent_swarms_enabled.rs  agentic_session_search.rs  all_errors.rs  analyze_context.rs  ansi_to_png.rs  ansi_to_svg.rs  api.rs  api_preconnect.rs  apple_terminal_backup.rs  argument_substitution.rs  array.rs  asciicast.rs  async_utils.rs  attachments.rs  attribution.rs  auth.rs  auth_file_descriptor.rs  auth_portable.rs  auto_mode_denials.rs  auto_run_issue.rs  auto_updater.rs  aws.rs  aws_auth_status_manager.rs  background_housekeeping.rs  background_preconditions.rs  background_remote_session.rs  betas.rs  billing.rs  binary_check.rs  binary_check_utils.rs  browser.rs  buffered_writer.rs  bundled_mode.rs  ca_certs.rs  (+326 more)
(+2423 files in other folders)
