[workspace]
resolver = "2"
members = [
    "crates/mossen-cli",
    "crates/mossen-agent",
    "crates/mossen-tui",
    "crates/mossen-commands",
    "crates/mossen-tools",
    "crates/mossen-mcp",
    "crates/mossen-types",
    "crates/mossen-utils",
    "crates/mossen-skills",
    "crates/mossen-remote",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/mossen/mossen-rs"
description = "Mossen - Rust-native terminal coding agent"
authors = ["Mossen Team"]

[workspace.dependencies]
# ===== 核心基础设施 =====
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# ===== CLI 框架 =====
clap = { version = "4.5", features = ["derive", "env", "string"] }

# ===== TUI 渲染 =====
ratatui = "0.28"
crossterm = "0.28"

# ===== 网络与 HTTP =====
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls", "multipart"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-native-roots"] }
eventsource-stream = "0.2"
hyper = { version = "1.4", features = ["full"] }
hyper-util = "0.1"
tower = { version = "0.5", features = ["full"] }

# ===== 代码分析与文件系统 =====
tree-sitter = "0.25"
globset = "0.4"
walkdir = "2.5"
notify = "7.0"
ignore = "0.4"

# ===== 序列化与配置 =====
toml = "0.8"
serde_yaml = "0.9"
dotenvy = "0.15"
schemars = "0.8"
jsonschema = "0.21"

# ===== 工具库 =====
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
semver = "1.0"
base64 = "0.22"
sha2 = "0.10"
shellexpand = "3.1"
rand = "0.8"
once_cell = "1.19"
dashmap = "6.0"
parking_lot = "0.12"
bytes = "1.7"
futures = "0.3"
futures-util = "0.3"
pin-project-lite = "0.2"
async-trait = "0.1"
itertools = "0.13"
flate2 = "1.0"
url = "2.5"
which = "6.0"
dirs = "5.0"

# ===== 文本与终端处理 =====
syntect = "5.2"
console = "0.15"
unicode-width = "0.2"
unicode-segmentation = "1.11"
textwrap = "0.16"
strip-ansi-escapes = "0.2"
similar = "2.6"

# ===== 进程管理 =====
nix = { version = "0.29", features = ["signal", "process", "user"] }
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

# ===== 模板与 Markdown =====
pulldown-cmark = "0.12"

# ===== 数据结构 =====
lru = "0.12"
indexmap = { version = "2.5", features = ["serde"] }

# ===== 数据校验 =====
validator = { version = "0.18", features = ["derive"] }

# ===== 测试 =====
tokio-test = "0.4"
tempfile = "3.12"
assert_cmd = "2.0"
predicates = "3.1"
mockall = "0.13"

# ===== 内部 crate =====
mossen-types = { path = "crates/mossen-types" }
mossen-utils = { path = "crates/mossen-utils" }
mossen-agent = { path = "crates/mossen-agent" }
mossen-tui = { path = "crates/mossen-tui" }
mossen-commands = { path = "crates/mossen-commands" }
mossen-tools = { path = "crates/mossen-tools" }
mossen-mcp = { path = "crates/mossen-mcp" }
mossen-skills = { path = "crates/mossen-skills" }
mossen-remote = { path = "crates/mossen-remote" }
mossen-cli = { path = "crates/mossen-cli" }

# ===== Release 优化 =====
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = false

[profile.release.package.mossen-cli]
opt-level = 3

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.dev.package."*"]
opt-level = 2

[profile.bench]
inherits = "release"
debug = true
strip = false
lto = "thin"

[profile.test]
opt-level = 1
debug = true
incremental = true
