[package]
name = "mossen-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Mossen Agent 核心引擎 — 查询编排、上下文管理、流式处理"

[lib]
name = "mossen_agent"
path = "src/lib.rs"

[dependencies]
mossen-types.workspace = true
mossen-utils.workspace = true
mossen-mcp.workspace = true

# 核心
tokio.workspace = true
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = "0.1"
async-stream = "0.3"
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
futures.workspace = true
futures-util.workspace = true
pin-project-lite.workspace = true
bytes.workspace = true
rand.workspace = true

# 网络
reqwest.workspace = true
eventsource-stream.workspace = true

# 数据
chrono.workspace = true
uuid.workspace = true
dashmap.workspace = true
lru.workspace = true
indexmap.workspace = true
parking_lot.workspace = true
regex.workspace = true
semver.workspace = true

# 序列化
serde_yaml.workspace = true
toml.workspace = true

# Hook 系统
notify = { version = "7.0", default-features = false, features = ["macos_fsevent"] }
url = "2"

# MCP 服务层
lazy_static = "1"
hex = "0.4"
sha2 = "0.10"
base64 = "0.22"
open = "5"
urlencoding = "2"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
once_cell = "1"
dirs = "5"
sha1 = "0.10"
http = "1"

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
mockall.workspace = true
