[package]
name = "mossen-remote"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Mossen 远程通信 — SSH、WebSocket、HTTP 传输层"

[lib]
name = "mossen_remote"
path = "src/lib.rs"

[dependencies]
mossen-types.workspace = true
mossen-utils.workspace = true

# 核心
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
futures.workspace = true
bytes.workspace = true

# 网络
reqwest.workspace = true
tokio-tungstenite.workspace = true
hyper.workspace = true
hyper-util.workspace = true
tower.workspace = true

# 工具
uuid.workspace = true
chrono.workspace = true
base64.workspace = true
rand.workspace = true
pin-project-lite.workspace = true
url = "2.5"
http = "1.1"

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
